<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="800dp">

            <RelativeLayout
                android:layout_marginTop="47dp"
                android:layout_marginStart="32dp"
                android:layout_width="344dp"
                android:layout_height="wrap_content">

                <View
                    android:background="@drawable/fondo2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="100dp"
                    android:layout_width="355dp"
                    android:layout_height="430.68dp"
                    android:elevation="4dp" />

                <ImageView
                    android:src="@drawable/logo_ek1"
                    android:layout_marginStart="54dp"
                    android:layout_width="246.44dp"
                    android:layout_height="201.66dp"
                    android:elevation="4dp"/>

                <TextView
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/colortext"
                    android:layout_marginLeft="71dp"
                    android:layout_marginTop="202dp"
                    android:layout_width="220dp"
                    android:layout_height="29.75dp"
                    android:text="@string/accede_a_tu_cuenta_string"
                    android:elevation="4dp"/>

                <RelativeLayout
                    android:layout_marginTop="370dp"
                    android:layout_marginStart="32.5dp"
                    android:layout_width="150dp"
                    android:layout_height="19dp"
                    android:elevation="4dp">

                    <TextView
                        android:id="@+id/restablecer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/restablecer_string"
                        android:textColor="@color/colortext"
                        android:textSize="15dp"
                        tools:ignore="TouchTargetSizeCheck"/>
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btniniciarsesion"
                    android:layout_width="292dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginTop="425dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="1dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:shadowRadius="4"
                        android:shadowColor="#7A000000"
                        android:textColor="@color/colortext"
                        android:layout_width="292dp"
                        android:layout_height="48dp"
                        android:text="@string/iniciar_sesion_ek2_string"
                        android:elevation="4dp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/txtusuario"
                android:layout_marginTop="300dp"
                android:layout_marginStart="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="9dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="47dp"
                    android:layout_height="45dp"
                    android:background="@color/white">

                    <ImageView
                        android:src="@drawable/iconusers"
                        android:contentDescription="iconusers"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="7dp"
                        android:layout_width="32dp"
                        android:layout_height="32dp"/>
                </RelativeLayout>

                <EditText
                    android:id="@+id/textemail"
                    android:layout_marginStart="47dp"
                    android:layout_width="242dp"
                    android:layout_height="45dp"
                    android:background="@color/white"
                    android:hint="Correo Electrónico*"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck"
                    android:elevation="4dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="360dp"
                android:layout_marginStart="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="9dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <ImageView
                        android:src="@drawable/iconpassword"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="7dp"
                        android:layout_width="32dp"
                        android:layout_height="32dp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/textcontraseña"
                    android:layout_marginStart="47dp"
                    android:layout_width="242dp"
                    android:layout_height="45dp"
                    android:background="@color/white"
                    android:elevation="4dp"
                    android:hint=" Contraseña*"
                    android:textSize="15dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btncrearcuenta"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="689dp"
                android:layout_width="292dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|center"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <TextView
                    android:layout_width="292dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:shadowColor="#7A000000"
                    android:text="@string/iniciar_sesion_ek3_string"
                    android:textColor="@color/colortext"
                    android:textSize="15dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/colortext"
                android:layout_marginLeft="97dp"
                android:layout_marginTop="657dp"
                android:layout_width="224dp"
                android:layout_height="34dp"
                android:text="@string/todavia_no_eres_cliente__string"
                android:elevation="4dp" />

            <RelativeLayout
                android:layout_marginTop="450dp"
                android:layout_marginStart="175dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:ignore="MissingConstraints"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</HorizontalScrollView>