<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">

      <RelativeLayout
          android:id="@+id/btnatras"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="20dp"
          android:clickable="true"
          android:elevation="4dp"
          android:foreground="?attr/selectableItemBackgroundBorderless"
          tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="iconusers_ek1"
            android:elevation="4dp"
            android:src="@drawable/atras" />
      </RelativeLayout>

      <RelativeLayout
          android:layout_marginTop="205dp"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView android:id="@+id/tus_datos"
            android:textSize="15dp"
            android:textColor="@color/colortext"
            android:layout_marginStart="35dp"
            android:layout_width="100dp"
            android:layout_height="28.5dp"
            android:text="@string/tus_datos_string" />

        <androidx.cardview.widget.CardView
            android:id="@+id/txtusuario"
            android:layout_marginTop="39dp"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white">

          <RelativeLayout
              android:layout_marginStart="46dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="291dp"
                android:layout_height="50dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/_bg__app_shape"
                android:elevation="4dp"
                android:hint="Correo Electrónico*"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                tools:ignore="TouchTargetSizeCheck" />
          </RelativeLayout>

          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <ImageView
                android:src="@drawable/iconusers"
                android:contentDescription="iconusers_ek1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="30.57dp"
                android:layout_height="32dp"
                android:elevation="4dp" />
          </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="107dp"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white">

          <RelativeLayout

              android:layout_marginStart="46dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <EditText
                android:id="@+id/editTextcontraseña"
                android:layout_width="291dp"
                android:layout_height="50dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/_bg__app_shape"
                android:elevation="4dp"
                android:hint="Contraseña*"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
          </RelativeLayout>

          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <ImageView
                android:src="@drawable/iconpassword"
                android:contentDescription="iconpassword_ek1"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_width="30.57dp"
                android:layout_height="32.24dp"
                android:elevation="4dp"/>
          </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="175dp"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white">

          <RelativeLayout
              android:layout_marginStart="46dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextconfirmar"
                android:layout_width="291dp"
                android:layout_height="50dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/_bg__app_shape"
                android:elevation="4dp"
                android:hint="Confirmar contraseña*"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck"/>
          </RelativeLayout>

          <RelativeLayout
              android:layout_marginTop="0dp"
              android:layout_marginStart="0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <ImageView
                android:src="@drawable/iconpassword"
                android:contentDescription="iconpassword_ek2"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_width="30.57dp"
                android:layout_height="32.24dp"
                android:elevation="4dp"/>
          </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="251dp"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white">

          <RelativeLayout
              android:layout_marginStart="46dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <EditText
                android:id="@+id/editTextnombre"
                android:layout_width="116.5dp"
                android:layout_height="50dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/_bg__app_shape"
                android:elevation="4dp"
                android:hint="Nombre*"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                tools:ignore="TouchTargetSizeCheck"/>

          </RelativeLayout>

          <RelativeLayout
              android:layout_marginTop="8dp"
              android:layout_marginStart="8dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/iconusuario"
                android:contentDescription="iconusuario"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="30.45dp"
                android:layout_height="32dp" />
          </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="251dp"
            android:layout_marginStart="209dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white">

          <RelativeLayout
              android:layout_marginStart="46dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:elevation="4dp">

            <EditText
                android:id="@+id/editTextapellido"
                android:layout_width="116.5dp"
                android:layout_height="50dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/_bg__app_shape"
                android:elevation="4dp"
                android:hint="Apellidos*"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                tools:ignore="TouchTargetSizeCheck"/>
          </RelativeLayout>

          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/iconusuario"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="32.36dp"
                android:layout_height="32dp" />
          </RelativeLayout>
        </androidx.cardview.widget.CardView>
      </RelativeLayout>

      <androidx.cardview.widget.CardView
          android:id="@+id/btncrearcuenta"
          android:layout_marginTop="601dp"
          android:layout_marginBottom="1dp"
          android:layout_width="320dp"
          android:layout_height="48dp"
          android:layout_gravity="center_horizontal|center"
          android:layout_marginLeft="46dp"
          android:clickable="true"
          android:foreground="?attr/selectableItemBackgroundBorderless"
          app:cardBackgroundColor="#FFFFFF"
          app:cardCornerRadius="16dp"
          app:cardElevation="5dp">

        <TextView
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="15dp"
            android:shadowColor="#7A000000"
            android:textColor="@color/colortext"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/iniciar_sesion_ek4_string"
            android:elevation="4dp" />
      </androidx.cardview.widget.CardView>

      <RelativeLayout
          android:layout_marginTop="108dp"
          android:layout_marginStart="110dp"
          android:layout_width="wrap_content"
          android:layout_height="30dp">

        <TextView
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="17dp"
            android:textColor="@color/colortext"
            android:layout_marginLeft="-3dp"
            android:layout_width="204dp"
            android:layout_height="29dp"
            android:text="@string/crea_una_cuenta_string"
            android:elevation="4dp" />

        <View
            android:background="@drawable/line_1_shape"
            android:layout_marginStart="1dp"
            android:layout_marginTop="25dp"
            android:layout_width="191dp"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_marginTop="408dp"
            android:layout_marginStart="65dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content">

          <ProgressBar
              android:id="@+id/progressBar"
              style="?android:attr/progressBarStyleLarge"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:visibility="gone"
              tools:ignore="MissingConstraints"/>
        </RelativeLayout>
      </RelativeLayout>
    </RelativeLayout>
  </ScrollView>
</HorizontalScrollView>